@@ -1,6 +1,6 @@
 {
-    "name": "onepress",
-    "version": "2.0.7",
+    "name": "screenr",
+    "version": "1.1.7",
     "main": "Gruntfile.js",
     "engines": {
         "node": ">= 0.10.0"
